fix: fixed item by username api
